log

Wed, 09 Mar 2022 18:37:29: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
  272 | }
      | ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
   20 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7305894
Sun, 13 Mar 2022 13:44:00: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function 'suma':
exercises.c:16:11: error: 'return' with a value, in function returning void [-Werror=return-type]
   16 |    return *c;
      |           ^~
exercises.c:14:6: note: declared here
   14 | void suma(int a, int b, int * c) {
      |      ^~~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7c72ab8
Sun, 13 Mar 2022 13:44:30: 
In file included from test.c:5:
exercises.c: In function 'suma':
exercises.c:16:11: error: 'return' with a value, in function returning void [-Werror=return-type]
   16 |    return *c;
      |           ^~
exercises.c:14:6: note: declared here
   14 | void suma(int a, int b, int * c) {
      |      ^~~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d9e6b0f
Sun, 13 Mar 2022 14:02:38: 
In file included from test.c:5:
exercises.c: In function 'suma':
exercises.c:16:11: error: 'return' with a value, in function returning void [-Werror=return-type]
   16 |    return *c;
      |           ^~
exercises.c:14:6: note: declared here
   14 | void suma(int a, int b, int * c) {
      |      ^~~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d4b9324
Sun, 13 Mar 2022 14:03:02: 
 exercises.c | 19 ++++++++++++++-----
 1 file changed, 14 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function 'sumaNultimos':
exercises.c:43:13: error: passing argument 1 of 'sumaN' makes pointer from integer without a cast [-Werror=int-conversion]
   43 |       sumaN(*a, m);
      |             ^~
      |             |
      |             int
exercises.c:22:15: note: expected 'int *' but argument is of type 'int'
   22 | int sumaN(int a[], int N) {
      |           ~~~~^~~
exercises.c: In function 'crearVector':
exercises.c:84:28: error: too few arguments to function 'calloc'
   84 |    vector->datos = (int *) calloc (n * sizeof(int));
      |                            ^~~~~~
In file included from test.c:2:
C:/msys64/mingw64/x86_64-w64-mingw32/include/stdlib.h:535:17: note: declared here
  535 |   void *__cdecl calloc(size_t _NumOfElements,size_t _SizeOfElements);
      |                 ^~~~~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
327ed1d
Sun, 13 Mar 2022 14:04:04: 
 exercises.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function 'crearVector':
exercises.c:79:28: error: too few arguments to function 'calloc'
   79 |    vector->datos = (int *) calloc (n * sizeof(int));
      |                            ^~~~~~
In file included from test.c:2:
C:/msys64/mingw64/x86_64-w64-mingw32/include/stdlib.h:535:17: note: declared here
  535 |   void *__cdecl calloc(size_t _NumOfElements,size_t _SizeOfElements);
      |                 ^~~~~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
test.c: In function 'test_suma_n':
test.c:97:5: error: implicit declaration of function 'sumaNultimos' [-Werror=implicit-function-declaration]
   97 |     sumaNultimos(a, 10, m, res);
      |     ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1e5eefe
